--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,6 @@
 apply plugin: 'com.android.application'
 
 android {
-    dataBinding {
-        enabled = true
-    }
-
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.dbohdanov.weatherapp"
@@ -53,7 +49,14 @@ dependencies {
     implementation 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.1.1'
     implementation 'com.jakewharton.rxbinding2:rxbinding-design:2.1.1'
 
-//    Dagger
+    //room
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+
+    // RxJava support for Room
+    implementation "android.arch.persistence.room:rxjava2:1.1.1"
+
+    //    Dagger
     implementation 'com.google.dagger:dagger:2.10'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
 
