--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,14 +18,14 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyABhJYo785USLsZ03qo0W2MDwHF1O7lHic" />
 
-        <activity android:name=".ui.MainActivity">
+        <activity android:name=".ui.main_activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.WeatherActivity"></activity>
+        <activity android:name=".ui.weather_activity.WeatherActivity"></activity>
     </application>
 
 </manifest>
